feat: dockerize backend, add MongoDB to docker and combine the backend with MongoDB

--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=padel
+
+spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/${MONGO_DATABASE_NAME}?authSource=admin
+
 server.port=8085
