--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,24 @@ services:
     env_file:
       - .env
 
+  frontend:
+    image: node:22-alpine
+    container_name: frontend_container
+    restart: always
+    working_dir: /app
+    ports:
+      - "3000:8081"
+    volumes:
+      - ./apps/frontend:/app
+      - /app/node_modules
+    depends_on:
+      - backend
+    command: sh -c "npm install && npm start"
+    environment:
+      - EXPO_PUBLIC_API_URL=http://backend:8085
+    env_file:
+      - .env
+
 volumes:
   mongodb_data:
     driver: local
