feat: database connection is now accessible through url

--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=padel
 
-spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/${MONGO_DATABASE_NAME}?authSource=admin
-
+spring.data.mongodb.uri=${MONGO_INITDB_URL}
 server.port=8085
