feat: add jwt authentication on backend

--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=padel
 
 spring.data.mongodb.uri=${MONGO_INITDB_URL}
+
+SECRET_KEY=ThisIsASecretKeyWithAtLeast32CharactersForHS256
+
 server.port=5000
