fix: change test route and add secret key to .env

--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=padel
 
 spring.data.mongodb.uri=${MONGO_INITDB_URL}
-
-SECRET_KEY=ThisIsASecretKeyWithAtLeast32CharactersForHS256
+SECRET_KEY=${JWT_SECRET_KEY}
 
 server.port=5000
