fix: change test route on frontend

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# Database
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=pass
 MONGO_DATABASE_NAME=example
+
+MONGO_INITDB_URL=url
+
+JWT_SECRET_KEY=key
