--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=padel
+spring.application.name=juice
 
 spring.data.mongodb.uri=${MONGO_INITDB_URL}
 SECRET_KEY=${JWT_SECRET_KEY}
