feat: add expo router

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -13,6 +13,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "env.d.ts"
+    "env.d.ts",
+    "src/app/index.tsx"
   ]
 }
