feat: add google oauth2 login dialog

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=pass
-MONGO_DATABASE_NAME=example
 
 MONGO_INITDB_URL=url
 
 JWT_SECRET_KEY=key
+
+GOOGLE_CLIENT_ID=id
+GOOGLE_CLIENT_SECRET=secret
