--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=juice
 
 spring.data.mongodb.uri=${MONGO_INITDB_URL}
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=email,profile
+
 SECRET_KEY=${JWT_SECRET_KEY}
 
 server.port=5000
