feat: add oauth2 redirect to frontend url

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ MONGO_INITDB_ROOT_PASSWORD=pass
 MONGO_INITDB_URL=url
 
 JWT_SECRET_KEY=key
+FRONTEND_URL=url
 
 GOOGLE_CLIENT_ID=id
 GOOGLE_CLIENT_SECRET=secret
