--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 SECRET_KEY=${JWT_SECRET_KEY}
+FRONTEND_URL=${FRONTEND_URL}
 
 server.port=5000
