--- a/apps/frontend/app.json
+++ b/apps/frontend/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./app/assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "com.blitz.juice",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
