--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ MONGO_INITDB_URL=url
 
 JWT_SECRET_KEY=key
 FRONTEND_URL=url
+APP_ANDROID_URL=url
 
 GOOGLE_CLIENT_ID=id
 GOOGLE_CLIENT_SECRET=secret
