--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 
 SECRET_KEY=${JWT_SECRET_KEY}
 FRONTEND_URL=${FRONTEND_URL}
+APP_ANDROID_URL=${APP_ANDROID_URL}
 
 server.port=5000
