--- a/apps/frontend/app.json
+++ b/apps/frontend/app.json
@@ -1,38 +1,34 @@
 {
   "expo": {
     "name": "juice",
-    "slug": "padel",
+    "slug": "juice",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/images/icon.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "juice",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.blitz.juice",
-      "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
-      }
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./app/assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.blitz.juice"
+      "package": "com.leostricak22.juice"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./app/assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./app/assets/images/splash-icon.png",
+          "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -47,7 +43,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "2853f809-997a-4f1a-8f21-b3e37becce94"
+        "projectId": "951675fa-488e-47ba-96c4-f4f10601a651"
       }
     }
   }
