--- a/apps/frontend/app.json
+++ b/apps/frontend/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "juice",
+    "name": "Juice",
     "slug": "juice",
     "version": "1.0.0",
     "orientation": "portrait",
