feat: add stripe payment test

--- a/apps/frontend/app.json
+++ b/apps/frontend/app.json
@@ -33,6 +33,13 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "@stripe/stripe-react-native",
+        {
+          "merchantIdentifier": "com.leostricak22.juice",
+          "enableGooglePay": true
+        }
       ]
     ],
     "experiments": {
