--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -10,4 +10,7 @@ SECRET_KEY=${JWT_SECRET_KEY}
 FRONTEND_URL=${FRONTEND_URL}
 APP_ANDROID_URL=${APP_ANDROID_URL}
 
+stripe.api.key=sk_test_your_stripe_secret_key
+stripe.public.key=pk_test_your_stripe_public_key
+
 server.port=5000
