--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -10,8 +10,8 @@ SECRET_KEY=${JWT_SECRET_KEY}
 FRONTEND_URL=${FRONTEND_URL}
 APP_ANDROID_URL=${APP_ANDROID_URL}
 
-stripe.api.key=sk_test_your_stripe_secret_key
-stripe.public.key=pk_test_your_stripe_public_key
-stripe.webhook.key=key
+stripe.api.key=${STRIPE_SECRET_KEY}
+stripe.public.key=${STRIPE_PUBLIC_KEY}
+stripe.webhook.key=${STRIPE_WEBHOOK_KEY}
 
 server.port=5000
