--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:23-alpine AS builder
 WORKDIR /app
 
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci
 
 COPY . .
 RUN npx expo export -p web
