--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'  # or 11, etc.
+          java-version: '12'
 
       - name: Cache Maven packages
         uses: actions/cache@v3
