feat: Add terrain picker

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.1",
     "expo": "53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
@@ -30,6 +31,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -42,14 +44,14 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/metro-config": "latest",
+    "@react-native-async-storage/async-storage": "latest",
     "@react-native-community/cli": "latest",
     "@stripe/stripe-react-native": "latest",
-    "@react-native-async-storage/async-storage": "latest",
     "@types/jest": "^29.5.12",
+    "@types/react": "~19.0.10",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "typescript": "^5.3.3",
-    "@types/react": "~19.0.10"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
