--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
@@ -46,7 +47,7 @@
     "@expo/metro-config": "latest",
     "@react-native-async-storage/async-storage": "latest",
     "@react-native-community/cli": "latest",
-    "@stripe/stripe-react-native": "latest",
+    "@stripe/stripe-react-native": "^0.44.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
