--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,43 +15,44 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^8.4.1",
-    "expo": "53.0.9",
-    "expo-blur": "~14.1.4",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "expo": "53.0.10",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/metro-config": "latest",
     "@react-native-async-storage/async-storage": "latest",
     "@react-native-community/cli": "latest",
-    "@stripe/stripe-react-native": "^0.44.0",
+    "@stripe/stripe-react-native": "0.45.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.7",
     "typescript": "^5.3.3"
   },
   "private": true
